Update package description

--- a/uiassure-src/package.json
+++ b/uiassure-src/package.json
@@ -1,7 +1,7 @@
 {
     "name": "uiassure",
     "version": "0.0.1",
-    "description": "UI testing platform that assures everything is still ok, through continuous monitoring or one time execution as part of build and dpeloyment automation.",
+    "description": "Opinionated PageObject implementation for node.js, with an eventual target of continuous background execution",
     "author": "Eli Weinstock-Herman <contact@tiernok.com>",
     "dependencies": {
 	"selenium-webdriver": "2.52.0"
